--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Chorume Coin Logo" class="logo">
+    <img src="mylogo.png" alt="Chorume Coin Logo" class="logo">
     <h1>Chorume Coin (CHRM)</h1>
     <p class="slogan">A criptomoeda que fede mas rende meme</p>
   </header>
