--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chorume Coin - A Moeda Mais Tóxica da Internet</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> <!-- Fonte -->
 </head>
 <body>
   <header>
     <img src="mylogo.png" alt="Chorume Coin Logo" class="logo">
     <h1>Chorume Coin (CHRM)</h1>
-    <p class="slogan">A criptomoeda que fede mas rende meme</p>
+    <p class="slogan">O cheiro de meme está no ar... e no código da Chorume Coin!</p> <!-- Novo texto -->
   </header>
 
   <main>
@@ -26,98 +27,4 @@
       <h2>Características:</h2>
       <ul>
         <li>✅ Sem propósito claro</li>
-        <li>💩 Lastreada em memes e rage posts</li>
-        <li>🔥 Tóxica como os comentários de YouTube</li>
-        <li>🚀 Pronta pra ir pro limbo (ou pra Lua, vai saber)</li>
-      </ul>
-    </section>
-
-    <section class="community">
-      <h2>Entre na comunidade:</h2>
-      <a href="#" class="btn">Discord</a>
-      <a href="#" class="btn">Twitter (X)</a>
-      <a href="#" class="btn">Reddit</a>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Chorume Coin. Nenhuma garantia, só caos. 🚽</p>
-  </footer>
-
-  <style>
-    body {
-      font-family: 'Comic Sans MS', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #1a1a1a;
-      color: #eee;
-      text-align: center;
-    }
-
-    header {
-      background-color: #330000;
-      padding: 2rem 1rem;
-    }
-
-    .logo {
-      width: 100px;
-    }
-
-    h1 {
-      font-size: 2.5rem;
-      margin: 0.5rem 0;
-    }
-
-    .slogan {
-      font-style: italic;
-      color: #f0c808;
-    }
-
-    main {
-      padding: 2rem;
-    }
-
-    section {
-      margin-bottom: 3rem;
-    }
-
-    .features ul {
-      list-style: none;
-      padding: 0;
-    }
-
-    .features li {
-      margin: 0.5rem 0;
-      font-size: 1.2rem;
-    }
-
-    .btn {
-      display: inline-block;
-      margin: 0.5rem;
-      padding: 0.75rem 1.5rem;
-      background-color: #ff4d4d;
-      color: white;
-      border-radius: 5px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: background 0.3s ease;
-    }
-
-    .btn:hover {
-      background-color: #cc0000;
-    }
-
-    footer {
-      background-color: #000;
-      padding: 1rem;
-      font-size: 0.9rem;
-    }
-
-    @media (max-width: 600px) {
-      h1 {
-        font-size: 2rem;
-      }
-    }
-  </style>
-</body>
-</html>
+        <li>💩 Lastreada em memes e rage pos
