--- a/index.html
+++ b/index.html
@@ -1,30 +1,117 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chorume Coin - A Moeda Mais Tóxica da Internet</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> <!-- Fonte -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Chorume Coin</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Ícones do Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  <style>
+    body {
+      background-color: #0f0f0f;
+      color: #e0e0e0;
+      font-family: 'Segoe UI', sans-serif;
+    }
+    .navbar {
+      background-color: #1a1a1a;
+    }
+    .btn-toxic {
+      background-color: #39ff14;
+      color: #000;
+    }
+    .btn-toxic:hover {
+      background-color: #32cd32;
+      color: #000;
+    }
+    .hero {
+      background: linear-gradient(135deg, #39ff14, #1a1a1a);
+      padding: 100px 0;
+      text-align: center;
+    }
+    .hero h1 {
+      font-size: 4rem;
+      font-weight: bold;
+    }
+    .hero p {
+      font-size: 1.5rem;
+    }
+    .section {
+      padding: 60px 0;
+    }
+    footer {
+      background-color: #1a1a1a;
+      padding: 20px 0;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <img src="mylogo.png" alt="Chorume Coin Logo" class="logo">
-    <h1>Chorume Coin (CHRM)</h1>
-    <p class="slogan">O cheiro de meme está no ar... e no código da Chorume Coin!</p> <!-- Novo texto -->
-  </header>
 
-  <main>
-    <section class="intro">
-      <h2>O que é a Chorume Coin?</h2>
-      <p>
-        Nascida das discussões mais sem noção da internet, a CHRM transforma tretas, ironia e caos em valor digital.
-        Zero utilidade prática, 100% potencial viral.
-      </p>
-    </section>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#">💀 Chorume Coin</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#sobre">Sobre</a></li>
+          <li class="nav-item"><a class="nav-link" href="#roadmap">Roadmap</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-    <section class="features">
-      <h2>Características:</h2>
-      <ul>
-        <li>✅ Sem propósito claro</li>
-        <li>💩 Lastreada em memes e rage pos
+  <!-- Hero Section -->
+  <section class="hero text-white">
+    <div class="container">
+      <h1>Chorume Coin</h1>
+      <p>A criptomoeda mais tóxica da internet</p>
+      <a href="#sobre" class="btn btn-toxic btn-lg mt-4">Descubra Mais</a>
+    </div>
+  </section>
+
+  <!-- Sobre Section -->
+  <section id="sobre" class="section">
+    <div class="container">
+      <h2 class="text-center mb-4">💩 O Que é a Chorume Coin?</h2>
+      <p class="text-center">Uma moeda digital criada para satirizar o universo das criptomoedas. Sem valor real, mas com muito humor ácido.</p>
+    </div>
+  </section>
+
+  <!-- Roadmap Section -->
+  <section id="roadmap" class="section bg-dark text-white">
+    <div class="container">
+      <h2 class="text-center mb-4">🗺️ Roadmap</h2>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item bg-dark text-white">Q1: Lançamento da moeda com zero utilidade</li>
+        <li class="list-group-item bg-dark text-white">Q2: Parcerias fictícias com empresas inexistentes</li>
+        <li class="list-group-item bg-dark text-white">Q3: Listagem em exchanges imaginárias</li>
+        <li class="list-group-item bg-dark text-white">Q4: Moon? Talvez em Marte.</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- Contato Section -->
+  <section id="contato" class="section">
+    <div class="container">
+      <h2 class="text-center mb-4">📬 Contato</h2>
+      <p class="text-center">Envie suas dúvidas, críticas ou memes para <a href="mailto:contato@chorumecoin.com">contato@chorumecoin.com</a></p>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <div class="container">
+      <p>&copy; 2025 Chorume Coin. Todos os direitos reservados.</p>
+    </div>
+  </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
