--- a/index.html
+++ b/index.html
@@ -1,117 +1,92 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Chorume Coin</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Ícones do Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>Chorume Coin (CHRM)</title>
   <style>
     body {
-      background-color: #0f0f0f;
-      color: #e0e0e0;
-      font-family: 'Segoe UI', sans-serif;
+      background-color: #f8f2e7;
+      font-family: monospace;
+      color: #111;
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
     }
-    .navbar {
-      background-color: #1a1a1a;
+
+    .logo {
+      display: block;
+      margin: 0 auto 2rem;
+      width: 200px;
     }
-    .btn-toxic {
-      background-color: #39ff14;
-      color: #000;
+
+    h1 {
+      font-size: 1.8rem;
+      color: #ff0055;
+      text-shadow: 1px 1px 0 #00ffcc;
     }
-    .btn-toxic:hover {
-      background-color: #32cd32;
-      color: #000;
+
+    p {
+      font-size: 1rem;
+      line-height: 1.6;
     }
-    .hero {
-      background: linear-gradient(135deg, #39ff14, #1a1a1a);
-      padding: 100px 0;
-      text-align: center;
+
+    .buttons {
+      margin-top: 2rem;
+      display: flex;
+      gap: 1rem;
+      flex-wrap: wrap;
     }
-    .hero h1 {
-      font-size: 4rem;
+
+    .btn {
+      background: linear-gradient(45deg, #00ffcc, #ff00cc, #00ccff);
+      border: none;
+      padding: 1rem;
+      color: #fff;
       font-weight: bold;
+      text-decoration: none;
+      border-radius: 8px;
+      box-shadow: 2px 2px 0 #000;
+      transition: transform 0.2s;
     }
-    .hero p {
-      font-size: 1.5rem;
+
+    .btn:hover {
+      transform: scale(1.05);
+      cursor: pointer;
     }
-    .section {
-      padding: 60px 0;
-    }
-    footer {
-      background-color: #1a1a1a;
-      padding: 20px 0;
-      text-align: center;
+
+    .sub {
+      font-size: 0.9rem;
+      display: block;
+      margin-top: 0.3rem;
+      color: #222;
     }
   </style>
 </head>
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container">
-      <a class="navbar-brand" href="#">💀 Chorume Coin</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="#sobre">Sobre</a></li>
-          <li class="nav-item"><a class="nav-link" href="#roadmap">Roadmap</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <img src="logo.png" alt="Logo Chorume Coin" class="logo">
 
-  <!-- Hero Section -->
-  <section class="hero text-white">
-    <div class="container">
-      <h1>Chorume Coin</h1>
-      <p>A criptomoeda mais tóxica da internet</p>
-      <a href="#sobre" class="btn btn-toxic btn-lg mt-4">Descubra Mais</a>
-    </div>
-  </section>
+  <h1>A Chorume Coin (CHRM) — a moeda mais tóxica da web!</h1>
 
-  <!-- Sobre Section -->
-  <section id="sobre" class="section">
-    <div class="container">
-      <h2 class="text-center mb-4">💩 O Que é a Chorume Coin?</h2>
-      <p class="text-center">Uma moeda digital criada para satirizar o universo das criptomoedas. Sem valor real, mas com muito humor ácido.</p>
-    </div>
-  </section>
+  <p>
+    Nascida dos comentários de redes sociais e discussões bizarras do Twitter, veio transformar cada gota de chorume digital em valor de mercado.
+  </p>
+  <p>🚀 Zero promessas de Lua — talvez só o Limbo.<br>
+     🧪 Zero utilidade.<br>
+     💩 100% caos.</p>
+  <p>
+    Lastreada em memes, tretas e postagens duvidosas.<br>
+    <strong>Segure seu CHRM. Não leia os comentários.</strong>
+  </p>
 
-  <!-- Roadmap Section -->
-  <section id="roadmap" class="section bg-dark text-white">
-    <div class="container">
-      <h2 class="text-center mb-4">🗺️ Roadmap</h2>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item bg-dark text-white">Q1: Lançamento da moeda com zero utilidade</li>
-        <li class="list-group-item bg-dark text-white">Q2: Parcerias fictícias com empresas inexistentes</li>
-        <li class="list-group-item bg-dark text-white">Q3: Listagem em exchanges imaginárias</li>
-        <li class="list-group-item bg-dark text-white">Q4: Moon? Talvez em Marte.</li>
-      </ul>
-    </div>
-  </section>
+  <div class="buttons">
+    <a class="btn" href="#comprar">
+      COMPRE CHRM<br><span class="sub">(se tiver coragem)</span>
+    </a>
+    <a class="btn" href="#whitepaper">
+      LEIA O WHITEPAPER<br><span class="sub">(não faça isso)</span>
+    </a>
+  </div>
 
-  <!-- Contato Section -->
-  <section id="contato" class="section">
-    <div class="container">
-      <h2 class="text-center mb-4">📬 Contato</h2>
-      <p class="text-center">Envie suas dúvidas, críticas ou memes para <a href="mailto:contato@chorumecoin.com">contato@chorumecoin.com</a></p>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <div class="container">
-      <p>&copy; 2025 Chorume Coin. Todos os direitos reservados.</p>
-    </div>
-  </footer>
-
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
