--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </head>
 <body>
 
-  <img src="logo.png" alt="Logo Chorume Coin" class="logo">
+  <img src="mylogo.png" alt="Logo Chorume Coin" class="logo">
 
   <h1>A Chorume Coin (CHRM) — a moeda mais tóxica da web!</h1>
 
