--- a/index.html
+++ b/index.html
@@ -1,112 +1,99 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+<!DOCTYPE html><html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chorume Coin</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Chorume Coin (CHRM)</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Rubik&display=swap" rel="stylesheet">
   <style>
     body {
+      margin: 0;
+      font-family: 'Rubik', sans-serif;
+      background: linear-gradient(145deg, #1f1f1f, #3a3a3a);
+      color: #f0f0f0;
+    }
+    header {
+      text-align: center;
+      padding: 2rem;
+    }
+    header img {
+      width: 180px;
+    }
+    h1 {
       font-family: 'Orbitron', sans-serif;
+      font-size: 3rem;
+      margin-top: 1rem;
     }
-    .glitch-hover:hover {
-      animation: glitch 0.3s infinite;
+    .section {
+      max-width: 800px;
+      margin: 3rem auto;
+      padding: 1rem;
+      background-color: #2b2b2b;
+      border-radius: 12px;
+      box-shadow: 0 0 12px #00ff99aa;
     }
-    @keyframes glitch {
-      0% { transform: translate(0); }
-      20% { transform: translate(-1px, 1px); }
-      40% { transform: translate(1px, -1px); }
-      60% { transform: translate(-1px, -1px); }
-      80% { transform: translate(1px, 1px); }
-      100% { transform: translate(0); }
+    .section h2 {
+      color: #00ff99;
+      border-bottom: 1px solid #00ff99;
+      padding-bottom: 0.5rem;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 1rem;
+    }
+    table td, table th {
+      padding: 0.75rem;
+      border-bottom: 1px solid #555;
+    }
+    .button {
+      display: inline-block;
+      margin-top: 1.5rem;
+      padding: 0.8rem 1.5rem;
+      background-color: #00ff99;
+      color: #000;
+      font-weight: bold;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+    .button:hover {
+      background-color: #00cc77;
+    }
+    footer {
+      text-align: center;
+      margin: 2rem;
+      font-size: 0.9rem;
+      color: #999;
     }
   </style>
 </head>
-<body class="bg-gradient-to-br from-zinc-900 to-black text-white overflow-x-hidden">
-  
-  <!-- Hero -->
-  <section class="min-h-screen flex flex-col items-center justify-center px-6 text-center relative">
-    <div class="w-40 h-40 mb-8 bg-zinc-800 rounded-full animate-pulse shadow-xl"></div>
-    <h1 class="text-4xl md:text-6xl font-bold mb-4">
-      A moeda <span class="text-lime-400">mais questionável</span> do mercado
-    </h1>
-    <p class="text-zinc-400 text-lg max-w-xl">
-      O projeto mais ousado desde a invenção do lixo eletrônico.
-    </p>
-    <button class="mt-8 px-6 py-3 bg-lime-500 hover:bg-lime-400 transition rounded-full font-semibold glitch-hover">
-      Comprar no impulso
-    </button>
-  </section>
-
-  <!-- Sobre -->
-  <section class="py-24 px-6 max-w-4xl mx-auto text-center">
-    <h2 class="text-3xl font-bold mb-6">Sobre a Chorume Coin</h2>
-    <p class="text-zinc-400 leading-relaxed">
-      Criada no fundo de um grupo de WhatsApp e lapidada com zero fundamentos.  
-      Chorume Coin é mais que uma moeda, é uma experiência antropológica.
-    </p>
-  </section>
-
-  <!-- Tokenomics -->
-  <section class="py-24 bg-zinc-950 px-6 text-center">
-    <h2 class="text-3xl font-bold mb-6">Tokenomics</h2>
-    <div class="w-40 h-40 mx-auto border-4 border-lime-400 rounded-full relative animate-spin-slow">
-      <div class="absolute inset-0 flex items-center justify-center text-sm">
-        42% Para o Meme
-      </div>
-    </div>
-    <p class="mt-4 text-zinc-400">E o resto? Foi para a zueira.</p>
-  </section>
-
-  <!-- Roadmap -->
-  <section class="py-24 px-6 max-w-3xl mx-auto">
-    <h2 class="text-3xl font-bold text-center mb-12">Roadmap</h2>
-    <div class="space-y-10">
-      <div class="border-l-2 border-lime-400 pl-4 relative">
-        <span class="absolute -left-3 top-1 w-4 h-4 bg-lime-400 rounded-full"></span>
-        Q2 2025 - Lançamento no grito
-      </div>
-      <div class="border-l-2 border-lime-400 pl-4 relative">
-        <span class="absolute -left-3 top-1 w-4 h-4 bg-lime-400 rounded-full"></span>
-        Q3 2025 - Pump fake coordenado
-      </div>
-      <div class="border-l-2 border-lime-400 pl-4 relative">
-        <span class="absolute -left-3 top-1 w-4 h-4 bg-lime-400 rounded-full"></span>
-        Q4 2025 - Nova promessa de whitepaper
-      </div>
-    </div>
-  </section>
-
-  <!-- Equipe -->
-  <section class="py-24 px-6 max-w-5xl mx-auto">
-    <h2 class="text-3xl font-bold text-center mb-12">A Equipe (se é que existe)</h2>
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
-      <div class="group relative">
-        <div class="w-32 h-32 bg-zinc-700 rounded-full mx-auto mb-4 transition group-hover:blur-sm"></div>
-        <p class="text-zinc-300 font-semibold">Anônimo #1</p>
-        <p class="text-xs text-zinc-500 group-hover:text-lime-400 transition">"Ex-estagiário da Faria Lima"</p>
-      </div>
-      <div class="group relative">
-        <div class="w-32 h-32 bg-zinc-700 rounded-full mx-auto mb-4 transition group-hover:blur-sm"></div>
-        <p class="text-zinc-300 font-semibold">Trader Misterioso</p>
-        <p class="text-xs text-zinc-500 group-hover:text-lime-400 transition">"Acertou 1 em 9 calls"</p>
-      </div>
-      <div class="group relative">
-        <div class="w-32 h-32 bg-zinc-700 rounded-full mx-auto mb-4 transition group-hover:blur-sm"></div>
-        <p class="text-zinc-300 font-semibold">AI CEO</p>
-        <p class="text-xs text-zinc-500 group-hover:text-lime-400 transition">"Gerado por prompt mal escrito"</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="py-12 text-center text-zinc-500 text-sm">
-    Chorume Coin™ — Nenhum direito reservado. Invista por sua conta e risco (sério).
-  </footer>
-
-</body>
-</html>
-<p align="center">
-  <img src="./logo.png" alt="Chorume Coin Logo" width="200"/>
-</p>
+<body>
+  <header>
+    <img src="logo.png" alt="Chorume Coin Logo">
+    <h1>Chorume Coin (CHRM)</h1>
+    <p>A cripto irreverente que escorre pelo blockchain com bom humor e ousadia.</p>
+    <a href="#" class="button">Comprar CHRM</a>
+  </header>  <section class="section">
+    <h2>Tokenomics</h2>
+    <table>
+      <tr><td>Suprimento total</td><td>1.000.000.000 CHRM</td></tr>
+      <tr><td>Liquidez inicial</td><td>50%</td></tr>
+      <tr><td>Queima irreversível</td><td>25%</td></tr>
+      <tr><td>Marketing e memes</td><td>15%</td></tr>
+      <tr><td>Equipe e devs</td><td>10%</td></tr>
+    </table>
+  </section>  <section class="section">
+    <h2>Roadmap</h2>
+    <ul>
+      <li>Lançamento da token</li>
+      <li>Primeira leva de memes (e merchan tóxico)</li>
+      <li>Listagem em DEX</li>
+      <li>NFT de tambor radioativo</li>
+      <li>Parcerias com projetos-meme</li>
+    </ul>
+  </section>  <section class="section">
+    <h2>Comunidade</h2>
+    <p>Entre na nossa comunidade tóxica:</p>
+    <ul>
+      <li><a href="#" style="color: #00ff99;">Telegram Oficial</a></li>
+      <li><a href="#" style="color: #
