--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chorume Coin</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header class="hero">
-        <img src="img/logo.png" alt="Chorume Coin Logo" class="logo">
+        <img src="./logo.png" alt="Logo">
         <h1>Chorume Coin</h1>
         <p class="subtitle">A criptomoeda mais radioativa da internet</p>
         <a href="#" class="buy-btn">Comprar Agora</a>
